infra/k8s/kyverno-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
  annotations:
    policies.kyverno.io/title: Require Non-Root User
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Containers must be required to run as non-root users. This policy ensures
      that the runAsNonRoot attribute is set to true.
spec:
  validationFailureAction: Audit # Set to Enforce to block pods, Audit to just flag them in Headlamp
  rules:
  - name: check-runasnonroot
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - push2prod
    validate:
      message: "Running as root is not allowed in the push2prod namespace. Set runAsNonRoot to true."
      pattern:
        spec:
          securityContext:
            runAsNonRoot: true
          containers:
          - =(securityContext):
              =(runAsNonRoot): true
